'create_tariff_module'
