# internal/money/deposit/model/deposit.go
@@ -9,12 +9,6 @@ type Status string
 type TarifType string
 
 const (
-	TarifLegkiyStart TarifType = "Легкий старт"
-	TarifTriumf      TarifType = "Триумф"
-	TarifMaksimum    TarifType = "Максимум"
-)
-
-const (
 	StatusPending  Status = "pending"  // ожидает подтверждения
 	StatusApproved Status = "approved" // активный
 	StatusClosed   Status = "closed"   // закрыт, разблокирован
@@ -29,5 +23,4 @@ type Deposit struct {
 	BlockUntil  *time.Time `json:"block_until,omitempty"`
 	DailyReward *float64   `json:"daily_reward,omitempty"`
 	Status      Status     `json:"status"`
-	Tarif       TarifType  `json:"tarif"`
 }
